--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "parcel-project-template",
+  "name": "goit-js-hw-08.git",
   "version": "2.0.0",
   "description": "",
-  "homepage": "https://github.com/artemslt/goit-js-hw-08.git",
+  "homepage": "https://artemslt.github.io/goit-js-hw-08.git/01-gallery.html",
   "scripts": {
     "start": "parcel src/*.html",
     "build": "parcel build src/*.html --public-url /goit-js-hw-08.git/"
