--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "goit-js-hw-08.git",
   "version": "2.0.0",
   "description": "",
-  "homepage": "https://artemslt.github.io/goit-js-hw-08.git/01-gallery.html",
+  "homepage": "https://artemslt.github.io/goit-js-hw-08.git/",
   "scripts": {
     "start": "parcel src/*.html",
     "build": "parcel build src/*.html --public-url /goit-js-hw-08.git/"
