--- a/package.json
+++ b/package.json
@@ -2,10 +2,10 @@
   "name": "goit-js-hw-08.git",
   "version": "2.0.0",
   "description": "",
-  "homepage": "https://artemslt.github.io/goit-js-hw-08.git/",
+  "homepage": "https://artemslt.github.io/goit-js-hw-08/",
   "scripts": {
     "start": "parcel src/*.html",
-    "build": "parcel build src/*.html --public-url /goit-js-hw-08.git/"
+    "build": "parcel build src/*.html --public-url /goit-js-hw-08/"
   },
   "repository": {
     "type": "git",
